# Georg.ia

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
.ssh/: id_rsa.pub
Georg.ia/georg/graph/: graph.py  state.py
Georg.ia/georg/model/: langchain_database.py  prompt.py
Georgapi/: .env  manage.py
Georgapi/Georgapi/: asgi.py  settings.py  urls.py  wsgi.py
Georgapi/api/: .my_pgpass  .pg_service.conf  settings.py  urls.py
Georgapi/pools/: models.py  serializers.py  urls.py  views.py
Georgapi/pools/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Georgapi/pools/accounts/migrations/: 0001_initial.py  0002_alter_user_info_email_alter_user_info_username.py
Georgapi/pools/migrations/: 0001_initial.py  0002_delete_llmresponse.py  0002_remove_llm_session_id_alter_llm_session_session.py  0003_llm_config_llm_interaction_log_llm_request_and_more.py  0003_remove_llm_config_session.py  0004_alter_llm_request_session_id.py  0005_user_info_llm_config_session_id_and_more.py  0006_rename_session_id_llm_interaction_log_session_and_more.py
Georgapi/src/: .env  pyproject.toml
Georgapi/src/georg/graph/: graph.py  node.py
Georgapi/src/georg/model/: langchain_database.py
Georgapi/src/georg/utils/: LLMClass.py
Portal/georg_ia/: package-lock.json  package.json
portal/: package-lock.json  package.json
portal/public/: chat_georgia.css  chat_georgia.html
portal/public/src/: main.js
portal/src/: server.js
