[project]
name = "georg-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Alexandre",email = "luizalexandre21@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)"
]

[tool.poetry]
packages = [{include = "georg"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
